ui alignment fixes

--- a/app/yard/static/css/style.css
+++ b/app/yard/static/css/style.css
@@ -5,7 +5,7 @@ hr {
 	border-color: #d2d2d2;
 }
 .container {
-	width: 1350px;
+	width: 1450px;
 }
 .yard .table-html > table > tbody > tr > td > table {
 	/*border: 1px solid #0000ae;*/
